# glib_practice

01_basic_types/: a.cpp  a.out
02_g_variant/01_show_internal_construct/: README.md  a.out  tuple.cpp  tuple.cpp-bkp
02_g_variant/02_create_g_variant/: Makefile  a.out  main.cpp
02_g_variant/03_gdbus_codegen_annotations/: a.c  a.h  foobar.xml
GDBUS/GDBusServer_Client/: CFrobberClient.cpp  CFrobberServer.cpp
GDBUS/GDBusServer_Client/introspect/: myapp-generated.c  myapp-generated.h  net.Corp.MyApp.Frobber.xml
GDBUS/gdbus_example/raw/: configure.ac
